# sittytalky

./: .gitignore  Makefile  README.md  meson.build  site.brutt.sittytalky.json
data/: meson.build  site.brutt.sittytalky.desktop.in  site.brutt.sittytalky.gschema.xml  site.brutt.sittytalky.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  sittytalky.gresource.xml  sittytalky.in  window.py  window.ui
src/assets/: meson.build
src/lib/: sender.py  server.py
